Body parameters validation on controllers
