# api/routes/ProxemicsHistory.js
@@ -1,0 +1,8 @@
+'use strict';
+module.exports = function(app) {
+  var proxemicsHistory = require('../controllers/ProxemicsHistory');
+
+
+  app.route('/v1/entities')
+    .get(proxemicsHistory.list);
+};
